Fixed mobile alignment

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -59,13 +59,13 @@ h2 {
         time.article-date {
             float: left;
             text-align: right;
-            width: 20%;
+            width: 25%;
         }
 
         span.article-link {
             float: left;
             margin-left: 1em; //!
-            width: 75%;
+            width: 70%;
 
             a { color: $blue !important; }
         }
